--- a/Image Social/Base.lproj/Main.storyboard
+++ b/Image Social/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Image_Social" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,112 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="dxo-vB-Jjl">
+                                <rect key="frame" x="46" y="391" width="283" height="136"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Email Address:" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IK9-9H-Na6">
+                                        <rect key="frame" x="0.0" y="0.0" width="283" height="30"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Password:" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dDF-3y-Gey">
+                                        <rect key="frame" x="0.0" y="50" width="283" height="30"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6HS-UT-E45">
+                                        <rect key="frame" x="0.0" y="100" width="283" height="36"/>
+                                        <color key="backgroundColor" red="0.8666666666666667" green="0.17254901960784313" blue="0.0" alpha="0.87" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                        <state key="normal" title="Sign In">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sa0-C3-wvD">
+                                <rect key="frame" x="112" y="211" width="150" height="150"/>
+                                <color key="backgroundColor" red="0.25490196078431371" green="0.36078431372549019" blue="0.64313725490196072" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="fgf-XR-grf"/>
+                                    <constraint firstAttribute="height" constant="150" id="jRo-aS-hww"/>
+                                </constraints>
+                                <state key="normal" image="f">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q6T-if-LVT">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Fairy_Tail_logo" translatesAutoresizingMaskIntoConstraints="NO" id="Dak-Ug-MPe">
+                                        <rect key="frame" x="112" y="28" width="150" height="94"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.73725490196078436" blue="0.83137254901960778" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="Dak-Ug-MPe" firstAttribute="centerY" secondItem="q6T-if-LVT" secondAttribute="centerY" id="BGw-xZ-rGS"/>
+                                    <constraint firstItem="Dak-Ug-MPe" firstAttribute="centerX" secondItem="q6T-if-LVT" secondAttribute="centerX" id="C3v-4P-NIN"/>
+                                    <constraint firstAttribute="height" constant="150" id="GjJ-0o-7ng"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5SY-RP-vc8">
+                                <rect key="frame" x="0.0" y="592" width="375" height="75"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="If You Have Not Signed In Before, An Account Will Automatically Be Created For You" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iol-sA-aVN">
+                                        <rect key="frame" x="8" y="18.5" width="359" height="38.5"/>
+                                        <fontDescription key="fontDescription" name="Avenir-BlackOblique" family="Avenir" pointSize="14"/>
+                                        <color key="textColor" white="1" alpha="0.69999999999999996" colorSpace="calibratedWhite"/>
+                                        <color key="highlightedColor" red="0.0" green="0.51372549020000002" blue="0.56078431370000004" alpha="0.87" colorSpace="calibratedRGB"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.51372549019607838" blue="0.5607843137254902" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="Iol-sA-aVN" secondAttribute="bottom" constant="18" id="Mh1-Ex-mOB"/>
+                                    <constraint firstItem="Iol-sA-aVN" firstAttribute="leading" secondItem="5SY-RP-vc8" secondAttribute="leading" constant="8" id="QLU-Gi-gPh"/>
+                                    <constraint firstAttribute="trailing" secondItem="Iol-sA-aVN" secondAttribute="trailing" constant="8" id="WVu-Pr-Nle"/>
+                                    <constraint firstAttribute="height" constant="75" id="byX-gU-IRc"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select A Sign In Method" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cYL-oi-gBC">
+                                <rect key="frame" x="16" y="170" width="343" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="WdI-Bu-gsQ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-BlackOblique" family="Avenir" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <color key="highlightedColor" red="0.0" green="0.51372549019607838" blue="0.5607843137254902" alpha="0.87" colorSpace="calibratedRGB"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="q6T-if-LVT" secondAttribute="trailing" id="0um-pJ-q9s"/>
+                            <constraint firstItem="q6T-if-LVT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="BwV-jF-ygb"/>
+                            <constraint firstItem="dxo-vB-Jjl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="IEF-bz-PjH"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="dxo-vB-Jjl" secondAttribute="trailing" constant="30" id="M4r-s9-gol"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="5SY-RP-vc8" secondAttribute="bottom" id="Rg8-dy-MEg"/>
+                            <constraint firstItem="dxo-vB-Jjl" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="30" id="WyF-uq-Py6"/>
+                            <constraint firstItem="q6T-if-LVT" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="X21-T1-b31"/>
+                            <constraint firstItem="5SY-RP-vc8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ZQU-Mo-olS"/>
+                            <constraint firstItem="cYL-oi-gBC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="dsC-B1-KDK"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="cYL-oi-gBC" secondAttribute="trailing" id="hyX-Rh-aMp"/>
+                            <constraint firstItem="Sa0-C3-wvD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lW0-l8-23Z"/>
+                            <constraint firstItem="Sa0-C3-wvD" firstAttribute="top" secondItem="cYL-oi-gBC" secondAttribute="bottom" constant="20" id="mnt-fY-pOz"/>
+                            <constraint firstItem="cYL-oi-gBC" firstAttribute="top" secondItem="q6T-if-LVT" secondAttribute="bottom" constant="20" id="sGO-cf-wg9"/>
+                            <constraint firstAttribute="trailing" secondItem="5SY-RP-vc8" secondAttribute="trailing" id="utS-mh-fhQ"/>
+                            <constraint firstItem="dxo-vB-Jjl" firstAttribute="top" secondItem="Sa0-C3-wvD" secondAttribute="bottom" constant="30" id="wSv-oZ-Tw7"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="119.1904047976012"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Fairy_Tail_logo" width="150" height="94"/>
+        <image name="f" width="352" height="328"/>
+    </resources>
 </document>
