--- a/Image Social/Base.lproj/Main.storyboard
+++ b/Image Social/Base.lproj/Main.storyboard
@@ -128,11 +128,46 @@
                     <connections>
                         <outlet property="emailAddressTextField" destination="IK9-9H-Na6" id="5eE-XQ-lm7"/>
                         <outlet property="passwordTextField" destination="dDF-3y-Gey" id="O8n-4i-Elz"/>
+                        <segue destination="ogb-Zf-Jvj" kind="show" identifier="signInToFeedSegue" id="gaj-kT-S47"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="119.1904047976012"/>
+        </scene>
+        <!--FeedVC-->
+        <scene sceneID="kqU-W3-lH2">
+            <objects>
+                <viewController id="ogb-Zf-Jvj" customClass="FeedVC" customModule="Image_Social" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="aE1-4M-hNA"/>
+                        <viewControllerLayoutGuide type="bottom" id="N0D-YR-wkK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Ebn-bN-awd">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ovn-sN-7LH">
+                                <rect key="frame" x="152.5" y="315" width="69" height="36"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
+                                <state key="normal" title="Sign Out">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="signInTapped:" destination="ogb-Zf-Jvj" eventType="touchUpInside" id="Yai-Uc-7Ys"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.73725490196078436" blue="0.83137254901960778" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="ovn-sN-7LH" firstAttribute="centerX" secondItem="Ebn-bN-awd" secondAttribute="centerX" id="3Uv-t3-Atz"/>
+                            <constraint firstItem="ovn-sN-7LH" firstAttribute="centerY" secondItem="Ebn-bN-awd" secondAttribute="centerY" id="Y8g-xQ-EXI"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1Bc-2Q-qDW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="842.39999999999998" y="124.58770614692655"/>
         </scene>
     </scenes>
     <resources>
