--- a/Image Social/Base.lproj/Main.storyboard
+++ b/Image Social/Base.lproj/Main.storyboard
@@ -29,13 +29,13 @@
                                         <rect key="frame" x="0.0" y="0.0" width="283" height="24"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                                     </textField>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password:" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dDF-3y-Gey" customClass="CustomTextFields" customModule="Image_Social" customModuleProvider="target">
+                                    <textField opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password:" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dDF-3y-Gey" customClass="CustomTextFields" customModule="Image_Social" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="44" width="283" height="24"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
-                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                        <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6HS-UT-E45" customClass="CustomButton" customModule="Image_Social" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="88" width="283" height="36"/>
@@ -282,13 +282,12 @@
                                                                 <constraint firstAttribute="height" constant="144" id="gZ6-IV-XXP"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="3U9-pQ-RwE">
+                                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do  " textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3U9-pQ-RwE">
                                                             <rect key="frame" x="8" y="228" width="327" height="75"/>
                                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="DhE-9H-cyU"/>
                                                             </constraints>
-                                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
                                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.75" colorSpace="calibratedRGB"/>
                                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -410,7 +409,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pRo-YT-Rbq" customClass="HeaderView" customModule="Image_Social" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="75"/>
                                 <subviews>
-                                    <imageView autoresizesSubviews="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sign-out" translatesAutoresizingMaskIntoConstraints="NO" id="7Z7-LQ-NOD">
+                                    <imageView autoresizesSubviews="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backbutton" translatesAutoresizingMaskIntoConstraints="NO" id="7Z7-LQ-NOD">
                                         <rect key="frame" x="16" y="20" width="45" height="38"/>
                                         <gestureRecognizers/>
                                         <constraints>
@@ -434,6 +433,9 @@
                                     <constraint firstItem="W4Z-uZ-oXn" firstAttribute="centerX" secondItem="pRo-YT-Rbq" secondAttribute="centerX" id="pBH-vQ-1kj"/>
                                     <constraint firstAttribute="height" constant="75" id="rln-E6-Leo"/>
                                 </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="ILM-4Q-vBZ" appends="YES" id="qRB-Hd-2pp"/>
+                                </connections>
                             </view>
                             <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="4dt-Wc-wb6" customClass="CircleImageView" customModule="Image_Social" customModuleProvider="target">
                                 <rect key="frame" x="57" y="182" width="261" height="303"/>
@@ -443,7 +445,7 @@
                                     <constraint firstAttribute="height" constant="303" id="NYD-MG-5O3"/>
                                 </constraints>
                                 <connections>
-                                    <outletCollection property="gestureRecognizers" destination="1K1-Ex-2ag" appends="YES" id="SK6-az-z3M"/>
+                                    <outletCollection property="gestureRecognizers" destination="RRM-oJ-Tbu" appends="YES" id="rwx-te-aEE"/>
                                 </connections>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Username:" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rh5-43-wgA" customClass="CustomTextFields" customModule="Image_Social" customModuleProvider="target">
@@ -485,9 +487,14 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XyG-1Q-rG4" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="1K1-Ex-2ag">
+                <tapGestureRecognizer id="ILM-4Q-vBZ">
                     <connections>
-                        <action selector="selectionProfileImageView:" destination="4pG-3p-0nL" id="QbE-n6-9XS"/>
+                        <action selector="backButtonPressed:" destination="4pG-3p-0nL" id="94A-of-QeN"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer id="RRM-oJ-Tbu">
+                    <connections>
+                        <action selector="selectionProfileImageView:" destination="4pG-3p-0nL" id="RJz-xl-ByI"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
@@ -498,6 +505,7 @@
         <image name="Fairy_Tail_logo" width="150" height="94"/>
         <image name="add-image" width="88" height="88"/>
         <image name="add-post" width="88" height="88"/>
+        <image name="backbutton" width="10" height="17"/>
         <image name="empty-heart" width="70" height="70"/>
         <image name="f" width="352" height="328"/>
         <image name="no-image" width="300" height="300"/>
